# json-archive

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-header  README.md  default.do
docs/: file-format-spec.md  info-command.md  state-command.md
docs/demo/: README.md  v1.json  v1.json.archive.zst  v2.json  v3.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_mutations.rs  fuzz_random_bytes.rs  fuzz_structured.rs
src/: archive.rs  detection.rs  diagnostics.rs  diff.rs  event_deserialize.rs  events.rs  flags.rs  lib.rs  main.rs  pointer.rs  reader.rs
src/cmd/: info.rs  mod.rs  state.rs
