[package]
name = "json-archive"
version = "0.99.0"
edition = "2021"

[dependencies]
xflags = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.0"
arbitrary = { version = "1.0", features = ["derive"] }
