[package]
name = "json-archive"
version = "0.99.0"
edition = "2021"

[features]
default = ["compression"]
compression = ["flate2", "brotli", "zstd"]

[dependencies]
xflags = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Compression support (optional, enabled by default)
flate2 = { version = "1.0", optional = true }
brotli = { version = "8.0", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3.0"
arbitrary = { version = "1.0", features = ["derive"] }
